# pwndoc-mcp-server

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  Test  mcp-registry.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  native.yml
debian/: control  postinst
docs/: README.md  SUMMARY.md  _config.yml  index.html
docs/development/: api-reference.md  building.md  contributing.md  testing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
docs/resources/: faq.md  troubleshooting.md
docs/tools/: audits.md  clients-companies.md  findings.md  overview.md  reports-statistics.md  users-settings.md  vulnerabilities.md
docs/user-guide/: claude-desktop.md  cli.md  docker.md  logging.md
native/: CMakeLists.txt  README.md
native/include/: client.hpp  config.hpp  server.hpp  tools.hpp
native/src/: client.cpp  client.hpp  config.cpp  config.hpp  main.cpp  server.cpp  tools.cpp
packaging/homebrew/: pwndoc-mcp-server.rb
packaging/scoop/: pwndoc-mcp-server.json
python/: .env.example  Dockerfile  README.md  WINDOWS_FIX_README.md  debug_stdout.py  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  windows_diagnostic.py
python/scripts/: bump_version.py
python/src/pwndoc_mcp_server/: __init__.py  cli.py  client.py  config.py  logging_config.py  mcp_installer.py  server.py  version.py
python/tests/: __init__.py  conftest.py  test_basic.py  test_cli.py  test_client.py  test_config.py  test_logging.py  test_server.py
