[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pwndoc-mcp-server"
version = "1.0.0"
description = "Model Context Protocol server for PwnDoc pentest documentation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Faour", email = "faour@finessedirect.com" }
]
maintainers = [
    { name = "Faour", email = "faour@finessedirect.com" }
]
keywords = [
    "mcp",
    "model-context-protocol",
    "pwndoc",
    "pentest",
    "penetration-testing",
    "security",
    "vulnerability",
    "audit",
    "claude",
    "ai",
    "llm"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed"
]

dependencies = [
    "httpx>=0.25.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
cli = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
]
sse = [
    "aiohttp>=3.8.0",
]
all = [
    "typer[all]>=0.9.0",
    "rich>=13.0.0",
    "aiohttp>=3.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
pwndoc-mcp = "pwndoc_mcp_server.cli:main"
pwndoc-mcp-server = "pwndoc_mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/faour-sec/pwndoc-mcp-server"
Documentation = "https://walidfaour.github.io/pwndoc-mcp-server"
Repository = "https://github.com/faour-sec/pwndoc-mcp-server"
Issues = "https://github.com/faour-sec/pwndoc-mcp-server/issues"
Changelog = "https://github.com/faour-sec/pwndoc-mcp-server/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/pwndoc_mcp_server"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --cov=pwndoc_mcp_server --cov-report=term-missing"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/pwndoc_mcp_server"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["pwndoc_mcp_server"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py38"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["S101"]
